--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@babel/polyfill": "^7.11.5",
     "@popperjs/core": "^2.11.6",
+    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/validators": "^2.0.0",
     "axios": "^0.27.2",
     "bootstrap": "^4.6.2",
     "bootstrap-vue": "^2.17.3",
@@ -18,6 +20,7 @@
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
     "vue": "^3.2.13",
+    "vue-basic-alert": "^1.1.0",
     "vue-router": "^4.0.13"
   },
   "devDependencies": {
