--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "portal-vue": "^2.1.7",
     "vue": "^3.2.13",
     "vue-basic-alert": "^1.1.0",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vue3-date-time-picker": "^2.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
